--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -136,7 +136,8 @@ p {
 .faded_out { color: #AAA; }
 
 .fullpage_backdrop_content { position: relative; z-index: 100001; font-family: 'Gentium Basic'; }
-.fullpage_backdrop { font-family: 'Gentium Basic'; background-color: rgba(255, 255, 255, 0.5); z-index: 999999; width: 100%; height: 100%; overflow: auto; position: fixed; top: 0; left: 0; margin: 0; padding: 0; text-align: center; }
+.fullpage_backdrop { font-family: 'Gentium Basic'; background-color: rgba(255, 255, 255, 0.4); z-index: 999999; width: 100%; height: 100%; overflow: auto; position: fixed; top: 0; left: 0; margin: 0; padding: 0; text-align: center; }
+.fullpage_backdrop.dark { background-color: rgba(0, 0, 0, 0.3); }
 
 .backdrop_box { position: absolute; top: 60px; left: 50%; z-index: 100001; clear: both; padding: 0 !important; }
 .backdrop_box#reportissue_container { top: 10px; }
@@ -309,9 +310,9 @@ p {
 }
 #loading img {
 	position: absolute;
-	bottom: 20px;
-	right: 5px;
-	opacity: 0.6;
+	bottom: 30px;
+	left: 30px;
+	opacity: 0.8;
 }
 
 .main-content {
@@ -1276,15 +1277,41 @@ li.cards { list-style: none; }
 	width: 160px;
 	overflow: visible;
 }
+#play-area .card {
+	z-index: 100001;
+	float: right;
+	box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.8);
+}
+#play-area .card.item {
+	z-index: 100000;
+	float: right;
+	box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.8);
+	position: absolute;
+	top: 0;
+	right: 0;
+	-webkit-transform: translateY(-100px) scale(0.9);
+	-moz-transform: translateY(-100px) scale(0.9);
+	-ms-transform: translateY(-100px) scale(0.9);
+	-o-transform: translateY(-100px) scale(0.9);
+	transform: translateY(-100px) scale(0.9);
+}
+#play-area .card.player.item {
+	float: left;
+	right: auto;
+	left: 0;
+}
+#play-area .card.player.item + .card.player.item {
+	left: 165px;
+}
 #play-area .card.creature {
 	-webkit-transform: translateX(-30px) translateY(-70px);
 	-moz-transform: translateX(-30px) translateY(-70px);
 	-ms-transform: translateX(-30px) translateY(-70px);
 	-o-transform: translateX(-30px) translateY(-70px);
 	transform: translateX(-30px) translateY(-70px);
-	box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.8);
-	z-index: 100001;
-	float: right;
+}
+#play-area .card.player {
+	float: left;
 }
 #play-area .card.creature.player {
 	-webkit-transform: translateX(30px) translateY(-70px);
@@ -1292,7 +1319,6 @@ li.cards { list-style: none; }
 	-ms-transform: translateX(30px) translateY(-70px);
 	-o-transform: translateX(30px) translateY(-70px);
 	transform: translateX(30px) translateY(-70px);
-	float: left;
 }
 .card.creature {
     background-image: url('/images/card_white.png');
@@ -3080,7 +3106,7 @@ li.card-slot {
 	-o-transition: height 0.7s ease-in-out, background-color 0.7s ease-in-out;
 	transition: height 0.7s ease-in-out, background-color 0.7s ease-in-out;
 }
-#game_chat .chat_room .chat_room_users {
+#game_chat .chat_room_users, #game_chat .users_header {
 	display: none;
 }
 #game_chat .chat_room, #game_chat .chat_room_lines { 
@@ -3275,8 +3301,8 @@ li.card-slot {
 	padding: 0;
 	position: absolute;
 	bottom: 0;
-	left: 100px;
-	height: 20px;
+	left: 0;
+	height: 30px;
 	border-top: 2px solid rgba(21, 15, 7, 0.7);
 	box-shadow: 0 -4px 5px rgba(0, 0, 0, 0.4);
 	background: url('/images/menu_bg.png') repeat top left;
@@ -3316,6 +3342,12 @@ li.card-slot {
 #play-menu button.back {
 	margin-top: 15px;
 	font-size: 1em !important;
+	padding: 7px 0 !important;
+}
+#play-menu .button.exit {
+	margin-top: 25px;
+	margin-bottom: 25px;
+	font-size: 0.9em !important;
 	padding: 7px 0 !important;
 }
 #play-version:first-line {
@@ -3488,17 +3520,70 @@ li.card-slot {
 	font-weight: normal;
 }
 
-.lobby_chat {
-	float: right;
-	width: 740px;
-	margin: 10px 10px 0 0;
-	height: 535px;
-	margin-bottom: 50px;
-	border-left: 1px solid rgba(255, 255, 255, 0.3);
+#devo-logo {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	font-size: 0.65em;
+	width: 200px;
+	text-align: center;
 }
-.lobby_chat .chat_room_lines {
+#devo-logo .devo-box {
+	bottom: auto;
+	right: auto;
+	left: 5px;
+	top: 5px;
+	padding: 0;
+}
+#lobby_chat {
+	float: none;
+	margin: 0;
+	position: absolute;
+	right: 8px;
+	bottom: 36px;
+	border-bottom-right-radius: 0;
+	border-width: 1px !important;
+	background: rgba(162, 213, 236, 0.3);
+	box-sizing: content-box;
+}
+#lobby_chat .chat_room_lines {
 	padding-top: 20px;
-	height: 480px;
+	box-shadow: none;
+}
+
+.profile_menu .strip ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	position: absolute;
+	bottom: 10px;
+	right: 8px;
+}
+
+.profile_menu .strip ul li {
+	height: 20px;
+	min-width: 70px;
+	display: inline-block;
+	text-align: center;
+	line-height: 17px;
+	font-size: 1em;
+	font-weight: normal;
+	font-family: 'Amaranth';
+	padding: 3px 10px;
+	background: -webkit-linear-gradient(bottom, rgba(162, 213, 236, 0.4) 80%, transparent 100%); /* Chrome10+,Safari5.1+ */
+	background: -moz-linear-gradient(bottom, rgba(162, 213, 236, 0.4) 80%, transparent 100%); /* FF3.6+ */
+	background: -ms-linear-gradient(bottom, rgba(162, 213, 236, 0.4) 80%, transparent 100%); /* IE10+ */
+	background: -o-linear-gradient(bottom, rgba(162, 213, 236, 0.4) 80%, transparent 100%); /* Opera11.10+ */
+	background: linear-gradient(to top, rgba(162, 213, 236, 0.4) 80%, transparent 100%); /* W3C */
+	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
+	border-radius: 0 0 5px 5px;
+}
+.profile_menu .strip ul li.selected {
+	background: rgba(162, 213, 236, 0.85);
+}
+#lobby_chat .chat_room_form_container {
+	height: 30px;
+	padding-top: 5px;
 }
 .chat_room {
 	display: block;
@@ -3528,7 +3613,8 @@ li.card-slot {
 .chat_room .users_header { 
 	position: absolute;
 	right: 0;
-	top: 7px;
+	top: 0;
+	font-size: 0.9em;
 	width: 185px;
 }
 .chat_room header subject {
@@ -3545,10 +3631,8 @@ li.card-slot {
 	margin: 0;
 }
 .chat_room_form_container img {
-	left: 637px;
-	position: absolute;
-	z-index: 100;
-	top: 5px;
+	float: right;
+	margin-right: 5px;
 }
 .chat_room_loading {
 	position: absolute;
@@ -3579,7 +3663,7 @@ li.card-slot {
 }
 .chat_room_users {
 	float: right;
-	padding: 22px 5px 0 5px;
+	padding: 15px 5px 0 5px;
 	height: 465px;
 	width: 180px;
 	box-shadow: none;
