--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -129,15 +129,16 @@ p {
 .almost_not_transparent { opacity: 0.95; }
 .popup_message { font-family: 'Open sans'; margin: 0 auto; position: fixed; top: 5px; left: 5px; width: 600px; padding: 0 !important; font-size: 0.9em; border: 1px solid rgba(100, 100, 100, 0.5); border-radius: 3px; cursor: pointer; text-align: left; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.6); }
 .dismiss_me { position: absolute; top: 5px; right: 5px; text-align: right; font-size: 0.7em; line-height: 1; padding: 0; margin: 0; }
-.popup_message.failure { z-index: 200001; background-color: #E84545; color: #000; }
+.popup_message.failure { z-index: 2000001; background-color: #E84545; color: #000; }
 .popup_message.failure .dismiss_me { color: #822323; }
-.popup_message.success { z-index: 200000; color: rgba(255, 255, 255, 0.9); background-color: #555; }
+.popup_message.success { z-index: 2000000; color: rgba(255, 255, 255, 0.9); background-color: #555; }
 .popup_message.success .dismiss_me { color: #FFF; }
 .faded_out { color: #AAA; }
 
 .fullpage_backdrop_content { position: relative; z-index: 100001; font-family: 'Gentium Basic'; }
 .fullpage_backdrop { font-family: 'Gentium Basic'; background-color: rgba(255, 255, 255, 0.4); z-index: 999999; width: 100%; height: 100%; overflow: auto; position: fixed; top: 0; left: 0; margin: 0; padding: 0; text-align: center; }
-.fullpage_backdrop.dark { background-color: rgba(0, 0, 0, 0.3); }
+#settings-overlay.fullpage_backdrop { z-index: 1000000; }
+.fullpage_backdrop.dark { background-color: rgba(0, 0, 0, 0.7); }
 
 .backdrop_box { position: absolute; top: 60px; left: 50%; z-index: 100001; clear: both; padding: 0 !important; }
 .backdrop_box#reportissue_container { top: 10px; }
@@ -173,6 +174,7 @@ p {
 .rounded_box.white { background-color: #FFF; border-color: #CCC; font-family: 'Open Sans'; font-size: 1em; }
 .rounded_box.white h3 { padding-left: 5px; background: none; color: #000; font-family: 'Open Sans'; }
 
+#dialog_backdrop { z-index: 2000000; }
 #dialog_title, #dialog_content {margin-left: 75px; }
 #dialog_yes, #dialog_no { border-bottom: none !important; }
 /* end backdrop styling */
@@ -627,6 +629,18 @@ h6 {
 .content.faq a {
 	font-size: 0.75em;
 }
+.content.changelog ul {
+	margin-left: 0;
+	padding-left: 20px;
+}
+.content.changelog h3 {
+	margin: 0 0 30px 0;
+	letter-spacing: 1px;
+}
+.content.changelog h6 {
+	letter-spacing: 1px;
+	margin: 20px 0 0 0;
+}
 .content.news time {
 	font-size: 0.9em;
 	padding: 5px 10px;
@@ -719,6 +733,7 @@ footer .footer-info {
 	text-align: center;
 	font-size: 0.7em;
 	font-family: 'Metamorphous';
+	line-height: 14px;
 }
 footer a {
 	font-size: 1em;
@@ -1379,6 +1394,10 @@ li.card {
 	-ms-transition: opacity 0.4s ease;
 	-o-transition: opacity 0.4s ease;
 	transition: opacity 0.4s ease;
+}
+#play-area .card.effect-stun .stunned_overlay, #play-area .card.effect-stun + .card .stunned_overlay, #play-area .card.effect-stun + .card + .card .stunned_overlay, #play-area .card.effect-freeze .freeze_overlay, #play-area .card.effect-freeze .freeze_overlay .freeze-color {
+	width: 265px;
+	height: 355px;
 }
 .card.selected.effect-freeze .freeze_overlay, .card.selected.effect-freeze .freeze_overlay .freeze-color {
 	width: 265px;
@@ -2082,10 +2101,34 @@ li.card {
 	border: 1px solid rgba(200, 200, 200, 0.9);
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
 }
+.tooltip.bubble {
+	background: #FFF;
+	color: #000;
+	font-size: 1.4em;
+	border: 1px solid rgba(0, 0, 0, 0.9);
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+	padding: 2px !important;
+}
+.tooltip.bubble .bubble_content {
+	background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 80%, rgba(200, 200, 200, 0.7) 100%); /* Chrome10+,Safari5.1+ */
+	background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 80%, rgba(200, 200, 200, 0.7) 100%); /* FF3.6+ */
+	background: -ms-linear-gradient(top, rgba(255, 255, 255, 1) 80%, rgba(200, 200, 200, 0.7) 100%); /* IE10+ */
+	background: -o-linear-gradient(top, rgba(255, 255, 255, 1) 80%, rgba(200, 200, 200, 0.7) 100%); /* Opera11.10+ */
+	background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 80%, rgba(200, 200, 200, 0.7) 100%); /* W3C */
+	padding: 15px;
+	font-family: "Open Sans";
+	border-radius: 0 0 5px 5px;
+}
 .tooltip.big {
 	width: 340px;
 }
-*:hover > .tooltip, *:active > .tooltip {
+.current-turn .tooltip.bubble .bubble_content {
+	font-size: 0.7em !important;
+}
+.current-turn .tooltip.bubble .bubble_content {
+	padding: 7px;
+}
+*:hover > .tooltip, *:active > .tooltip, .tooltip.bubble.active {
 	z-index: 100;
 	width: 228px;
 	height: auto;
@@ -2105,6 +2148,13 @@ li.card {
 	bottom: auto;
 	top: 25px;
 }
+*:hover > .tooltip.bubble, *:active > .tooltip.bubble, .tooltip.bubble.active {
+	bottom: 160px;
+	width: 350px;
+	right: 50px;
+	left: auto;
+	top: auto;
+}
 .tooltip:before,
 .tooltip:after {
 	content: '';
@@ -2122,6 +2172,15 @@ li.card {
 	bottom: -10px;
 	margin-left: -10px;
 	border-top: 10px solid rgba(0, 0, 0, 0.75);
+}
+.tooltip.bubble:before,
+.tooltip.bubble:after {
+	left: 90%;
+	bottom: -10px;
+}
+.tooltip.bubble:after {
+	border-top: 10px solid rgba(255, 255, 255, 1);
+	bottom: -9px;
 }
 .tooltip.from-above:before, .tooltip.from-above:after {
 	border-top: none;
@@ -2513,7 +2572,7 @@ input:-moz-placeholder { color:#AAA; }
 #game-table {
 	background: url('/images/table_bg_med.jpg') no-repeat 50% 50%;
 	padding: 0;
-	margin: -20px auto 0 auto;
+	margin: 40px auto 0 auto;
 	position: relative;
 	clear: both;
 	border-color: transparent;
@@ -2522,12 +2581,22 @@ input:-moz-placeholder { color:#AAA; }
 	width: 900px;
 	height: 760px;
 	overflow: visible;
-	border-bottom: 20px solid rgba(11, 8, 4, 0.7);
+	border-bottom: 1px solid rgba(11, 8, 4, 0.7);
+}
+
+.in-play #game-table{
+	margin-top: -20px;
+	border-bottom-width: 20px;
 	-webkit-transform: rotateX(30deg);
 	-moz-transform: rotateX(30deg);
 	-ms-transform: rotateX(30deg);
 	-o-transform: rotateX(30deg);
 	transform: rotateX(30deg);
+	-webkit-transition: -webkit-transform 2.5s ease-in-out 1.5s, border-bottom-width 2.5s ease-in-out 1.5s, margin-top 2.5s ease-in-out 1.5s;
+	-moz-transition: -moz-transform 2.5s ease-in-out 1.5s, border-bottom-width 2.5s ease-in-out 1.5s, margin-top 2.5s ease-in-out 1.5s;
+	-ms-transition: -ms-transform 2.5s ease-in-out 1.5s, border-bottom-width 2.5s ease-in-out 1.5s, margin-top 2.5s ease-in-out 1.5s;
+	-o-transition: -o-transform 2.5s ease-in-out 1.5s, border-bottom-width 2.5s ease-in-out 1.5s, margin-top 2.5s ease-in-out 1.5s;
+	transition: transform 2.5s ease-in-out 1.5s, border-bottom-width 2.5s ease-in-out 1.5s, margin-top 2.5s ease-in-out 1.5s;
 }
 .card-slots-container {
 	height: 214px;
@@ -2766,13 +2835,33 @@ li.card-slot {
 }
 #opponent-slots-container {
 	position: absolute;
+	opacity: 1;
 	top: 40px;
 	left: 40px;
+	-webkit-transition: opacity 0.4s ease-in-out;
+	-moz-transition: opacity 0.4s ease-in-out;
+	-ms-transition: opacity 0.4s ease-in-out;
+	-o-transition: opacity 0.4s ease-in-out;
+	transition: opacity 0.4s ease-in-out;
 }
 #player-slots-container {
 	position: absolute;
 	bottom: 40px;
 	left: 40px;
+	opacity: 1;
+	-webkit-transition: opacity 0.4s ease-in-out;
+	-moz-transition: opacity 0.4s ease-in-out;
+	-ms-transition: opacity 0.4s ease-in-out;
+	-o-transition: opacity 0.4s ease-in-out;
+	transition: opacity 0.4s ease-in-out;
+}
+#player-slots-container.battling, #opponent-slots-container.battling {
+	opacity: 0.3;
+	-webkit-transition: opacity 0.4s ease-in-out;
+	-moz-transition: opacity 0.4s ease-in-out;
+	-ms-transition: opacity 0.4s ease-in-out;
+	-o-transition: opacity 0.4s ease-in-out;
+	transition: opacity 0.4s ease-in-out;
 }
 #play-area {
 	position: absolute;
@@ -2950,7 +3039,7 @@ li.card-slot {
 #player_potions {
 	position: fixed;
 	top: 70px;
-	left: -875px;
+	left: -900px;
 	width: 900px;
 	height: 485px;
 	padding: 10px 0;
@@ -2984,7 +3073,7 @@ li.card-slot {
 	left: -890px;
 }
 #player_stuff {
-	height: 25px;
+	height: 0;
 	width: 100%;
 	white-space: nowrap;
 	overflow-y: hidden;
@@ -3166,6 +3255,7 @@ li.card-slot {
 	position: fixed;
 	top: 10px;
 	left: 10px;
+	z-index: 10;
 }
 .game_invites .game_invite {
 	padding: 0;
@@ -3287,14 +3377,32 @@ li.card-slot {
 	margin: 0;
 	padding: 5px 0;
 }
+.ingame_menu {
+	position: fixed;
+	top: -50px;
+	left: 50%;
+	width: 200px;
+	margin-left: -100px;
+	z-index: 100002;
+	white-space: nowrap;
+}
+.in-play .ingame_menu {
+	top: 0;
+	-webkit-transition: top 2.5s ease-in-out 3s;
+	-moz-transition: top 2.5s ease-in-out 3s;
+	-ms-transition: top 2.5s ease-in-out 3s;
+	-o-transition: top 2.5s ease-in-out 3s;
+	transition: top 2.5s ease-in-out 3s;
+}
 .profile_menu {
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	overflow: visible;
-	height: 80px;
+	height: 35px;
 	width: 100%;
 	padding: 0;
+	z-index: 9000;
 }
 .profile_menu .strip {
 	margin: 0;
@@ -3308,6 +3416,7 @@ li.card-slot {
 	background: url('/images/menu_bg.png') repeat top left;
 	width: 100%;
 	z-index: 100;
+	white-space: nowrap;
 }
 .avatar {
 	border: 2px solid rgba(255, 255, 255, 0.9);
@@ -3319,10 +3428,51 @@ li.card-slot {
 	width: 150px;
 	height: 150px;
 	margin-right: 5px;
+	-webkit-transition: box-shadow 2s ease-in-out, -webkit-box-shadow 2s ease-in-out, -webkit-transform 2s ease-in-out;
+	-moz-transition: box-shadow 2s ease-in-out, -moz-box-shadow 2s ease-in-out, -moz-transform 2s ease-in-out;
+	-ms-transition: box-shadow 2s ease-in-out, -ms-box-shadow 2s ease-in-out, -ms-transform 2s ease-in-out;
+	-o-transition: box-shadow 2s ease-in-out, -o-transform 2s ease-in-out;
+	transition: box-shadow 2s ease-in-out, transform 2s ease-in-out;
+}
+.in-game .avatar {
+	-webkit-transform: scale(0.7) translateY(20px) translateX(20px);
+	-moz-transform: scale(0.7) translateY(20px) translateX(20px);
+	-ms-transform: scale(0.7) translateY(20px) translateX(20px);
+	-o-transform: scale(0.7) translateY(20px) translateX(20px);
+	transform: scale(0.7) translateY(20px) translateX(20px);
+}
+.in-game .avatar.mine {
+	-webkit-transform: scale(0.7) translateY(20px) translateX(-20px);
+	-moz-transform: scale(0.7) translateY(20px) translateX(-20px);
+	-ms-transform: scale(0.7) translateY(20px) translateX(-20px);
+	-o-transform: scale(0.7) translateY(20px) translateX(-20px);
+	transform: scale(0.7) translateY(20px) translateX(-20px);
+}
+.avatar.current-turn {
+	-webkit-transform: scale(1) translateY(0) translateX(0) !important;
+	-moz-transform: scale(1) translateY(0) translateX(0) !important;
+	-ms-transform: scale(1) translateY(0) translateX(0) !important;
+	-o-transform: scale(1) translateY(0) translateX(0) !important;
+	transform: scale(1) translateY(0) translateX(0) !important;
+	border: 2px solid rgba(200, 255, 200, 0.9);
+	box-shadow: 0 0 15px rgba(101, 193, 101, 0.8), 0 20px 32px rgba(101, 193, 101, 0.6), 0 -20px 65px rgba(101, 193, 101, 0.8);
+	-webkit-transition: box-shadow 2s ease-in-out, -webkit-box-shadow 2s ease-in-out, -webkit-transform 2s ease-in-out;
+	-moz-transition: box-shadow 2s ease-in-out, -moz-box-shadow 2s ease-in-out, -moz-transform 2s ease-in-out;
+	-ms-transition: box-shadow 2s ease-in-out, -ms-box-shadow 2s ease-in-out, -ms-transform 2s ease-in-out;
+	-o-transition: box-shadow 2s ease-in-out, -o-transform 2s ease-in-out;
+	transition: box-shadow 2s ease-in-out, transform 2s ease-in-out;
 }
 .profile_menu .avatar.mine {
 	z-index: 101;
 	left: -40px;
+	bottom: -40px;
+	top: auto;
+}
+
+.profile_menu .avatar.opponent {
+	z-index: 101;
+	left: auto;
+	right: -40px;
 	bottom: -40px;
 	top: auto;
 }
@@ -3333,7 +3483,10 @@ li.card-slot {
 	background: rgba(162, 213, 236, 0.3);
 	border-radius: 15px;
 	padding: 20px;
-	margin: 100px auto 0 auto;
+	margin: 50px auto 0 auto;
+}
+#play-menu.ingame {
+	margin-top: 20px;
 }
 #play-menu button.multiplayer {
 	font-size: 1.3em !important;
@@ -3381,11 +3534,13 @@ li.card-slot {
 .button::-moz-focus-inner { border: 0 !important; padding: 0 !important; margin: 0 !important; }
 
 .lobby_game_actions {
-	float: left;
-	width: 230px;
+	z-index: 1;
+	position: absolute;
+	left: 0;
+	top: 10px;
+	width: 220px;
 	margin-right: 0;
-	padding: 10px 7px 10px 10px;
-	position: relative;
+	padding: 0 5px 10px 10px;
 }
 #play-menu .button.quickmatch {
 	font-size: 1.35em;
@@ -3468,7 +3623,6 @@ li.card-slot {
 	box-shadow: 0 0 5px rgba(101, 193, 218, 0.2), 0 0 7px rgba(101, 193, 218, 0.8), 0 0 13px rgba(101, 193, 218, 0.6) !important;
 }
 #play-menu .right { margin-left: 5px; }
-.lobby_game_actions h3 { margin-top: 30px; }
 .my_games {
 	list-style: none;
 	margin: 10px 0 0 0;
@@ -3538,9 +3692,10 @@ li.card-slot {
 #lobby_chat {
 	float: none;
 	margin: 0;
-	position: absolute;
+	position: fixed;
 	right: 8px;
 	bottom: 36px;
+	z-index: 1000;
 	border-bottom-right-radius: 0;
 	border-width: 1px !important;
 	background: rgba(162, 213, 236, 0.3);
@@ -3549,6 +3704,18 @@ li.card-slot {
 #lobby_chat .chat_room_lines {
 	padding-top: 20px;
 	box-shadow: none;
+}
+#lobby_chat_toggler.ingame {
+	cursor: pointer;
+}
+#lobby_chat_toggler.ingame .notify.visible {
+	display: inline;
+}
+#lobby_chat_toggler.ingame .notify, #lobby_chat_toggler.selected .notify.visible {
+	display: none;
+}
+#ingame_chat_toggler.ingame {
+	cursor: pointer;
 }
 
 .profile_menu .strip ul {
@@ -3559,7 +3726,58 @@ li.card-slot {
 	bottom: 10px;
 	right: 8px;
 }
+.profile_menu.in-game .strip ul {
+	right: 160px;
+}
 
+#profile_menu_buttons {
+	float: left;
+	margin: 2px 0 0 130px;
+}
+#profile_menu_buttons .button {
+	font-size: 0.9em !important;
+	font-weight: normal;
+	padding: 2px 5px !important;
+}
+#game_menu_buttons {
+	float: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 33px;
+	padding: 2px 5px;
+	border: 2px solid rgba(21, 15, 7, 0.7);
+	border-top: none;
+	border-radius: 0 0 5px 5px;
+	box-shadow: 0 4px 5px rgba(0, 0, 0, 0.4);
+	background: url('/images/menu_bg.png') repeat top left;
+	text-align: center;
+	z-index: 100;
+}
+#game_menu_buttons .button {
+	font-size: 1em !important;
+	font-weight: normal;
+	padding: 7px 12px !important;
+	float: none;
+}
+#toggle-hand-button, #toggle-events-button {
+	position: absolute;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
+	width: 75px;
+	top: 5px;
+	z-index: 99;
+	font-weight: normal !important;
+	font-size: 0.9em !important;
+}
+#toggle-hand-button {
+	left: -85px;
+	border-radius: 5px 0 0 5px;
+}
+#toggle-events-button {
+	right: -85px;
+	border-radius: 0 5px 5px 0;
+}
 .profile_menu .strip ul li {
 	height: 20px;
 	min-width: 70px;
@@ -4122,6 +4340,7 @@ li.card-slot {
 
 #quickmatch_overlay .fullpage_backdrop_content {
 	text-align: center;
+	z-index: 99999999;
 }
 
 #finding_opponent {
@@ -4211,10 +4430,10 @@ li.card-slot {
 .diff.negative { color: darkred; }
 .diff.negative:before { content: '-'; }
 
-#game-countdown { border: 1px solid rgba(255, 255, 255, 0.6); width: 100px; height: 7px; position: absolute; right: 0; bottom: -13px; }
-#game-countdown div { background-color: rgba(255, 255, 255, 0.6); width: 100%; height: 7px; position: absolute; right: 0; }
+#game-countdown { border: 1px solid rgba(68, 51, 32, 0.95); width: 200px; height: 10px; position: absolute; float: none; margin: 0; top: 40px; left: 5px; }
+#game-countdown div { background-color: rgba(68, 51, 32, 0.85); width: 0; height: 10px; position: absolute; left: 0; }
 #game-countdown.enabled div {
-	width: 0;
+	width: 100%;
 	-webkit-transition: width 5s linear;
 	-moz-transition: width 5s linear;
 	-ms-transition: width 5s linear;
@@ -4229,8 +4448,25 @@ li.card-slot {
 	transition: width 10s linear;
 }
 
-#phase-3-actions { font-size: 1em; font-family: 'Amaranth'; font-weight: normal; color: #FFF; vertical-align: middle; clear: none; display: inline-block; padding: 0 10px 0; }
-#phase-3-actions span { font-weight: bold; font-size: 1.4em; font-family: 'Fredericka The Great'; }
+#phase-3-actions {
+	font-size: 1em;
+	font-family: 'Amaranth';
+	font-weight: normal;
+	color: rgba(255, 255, 255, 0.9);
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+	vertical-align: middle;
+	clear: none;
+	display: inline-block;
+	width: 200px;
+	text-align: center;
+	position: absolute;
+	top: 45px;
+	left: 3px;
+	background-color: rgba(0, 0, 0, 0.8);
+	padding: 5px;
+	border-radius: 7px;
+}
+#phase-3-actions span { font-weight: bold; font-family: 'Fredericka The Great'; }
 
 .popup-menu {
 	display: none;
@@ -4340,7 +4576,7 @@ li.card-slot {
 	color: rgba(162, 213, 236, 0.7);
 	margin: 0;
 	position: absolute;
-	top: -28px;
+	top: -26px;
 	left: 50%;
 	text-align: center;
 	margin-left: -300px;
