--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4618,6 +4618,7 @@ li.card-slot {
 .profile_menu .avatar.mine {
 	z-index: 101;
 	left: 33px;
+	cursor: pointer;
 }
 
 .profile_menu .avatar.opponent {
@@ -5328,6 +5329,23 @@ li.card-slot {
 	position: absolute;
 	bottom: 5px;
 	right: 5px;
+}
+.userinfo .rating {
+	line-height: 1.1em;
+	font-size: 0.7em;
+	font-weight: normal;
+	float: right;
+	margin: 0 0 10px 0;
+	display: inline-block;
+	text-align: center;
+	padding: 0;
+	width: 60px;
+	clear: right;
+	color: rgba(203, 182, 111, 0.6);
+}
+.userinfo .rating:first-line {
+	font-weight: bold;
+	font-size: 2.3em;
 }
 .userinfo .buttons .ui_button {
 	line-height: 14px !important;
